# CSC581_GameEngineFoundations

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  main.hpp  server.cpp
.cmake/api/v1/reply/: cache-v2-9d180063497432d7d6f2.json  cmakeFiles-v1-0ff67eabf3b426f42847.json  codemodel-v2-9ccd74e6fa32de4d9bf0.json  index-2024-09-25T19-58-30-0848.json
game/section_1_2/: main.cpp  server.cpp
game/section_3/: main.cpp  server.cpp
games/brick_breaker/: game1.cpp  server.cpp
games/brick_breaker/handlers/: collision_handler.hpp  game_state_handler.hpp  keyboard_handler.hpp  launch_handler.hpp  movement_handler.hpp  out_of_bound_handler.hpp  powerup_handler.hpp
games/brick_breaker/model/: data_model.hpp  events.hpp
games/brick_breaker/systems/: client.hpp  game_state_checker.hpp  out_of_bound_detector.hpp
games/bubble_shooter/: game1.cpp  server.cpp
games/bubble_shooter/handlers/: collision_handler.hpp  launch_handler.hpp  out_of_bound_handler.hpp
games/bubble_shooter/model/: component.hpp  events.hpp
games/bubble_shooter/strategy/: send_strategy.hpp
games/bubble_shooter/systems/: keyboard_movement.hpp  receiver.hpp
games/snake/: server.cpp  snake.cpp
games/snake/handlers/: collision_handler.hpp  food_handler.hpp  game_state_handler.hpp  keyboard_handler.hpp  movement_handler.hpp
games/snake/helpers/: quantizer.hpp  text_helper.hpp
games/snake/model/: components.hpp  event.hpp
games/snake/systems/: keyboard_movement.hpp  move.hpp  oob_detector.hpp  receiver.hpp  text_renderer.hpp
lib/ECS/: component_array.hpp  component_manager.hpp  coordinator.hpp  entity_manager.hpp  system.hpp  system_manager.hpp  types.hpp
lib/EMS/: event.hpp  event_coordinator.hpp  event_manager.hpp  types.hpp
lib/animation/controller/: moveBetween2Points.cpp  moveBetween2Points.hpp
lib/client_server/: client_1.cpp  client_2.cpp  client_3.cpp  server.cpp
lib/components/: components.hpp
lib/core/: defs.hpp  draw.cpp  draw.hpp  init.cpp  init.hpp  input.cpp  input.hpp  kinematic.hpp  structs.cpp  structs.hpp  timeline.cpp  timeline.hpp  timer.cpp  timer.hpp
lib/core/physics/: collision.cpp  collision.hpp  gravity.cpp  gravity.hpp  keyMovement.cpp  keyMovement.hpp  physics.cpp  physics.hpp
lib/data_structures/: ThreadSafePriorityQueue.hpp
lib/enum/: enum.hpp  message_type.hpp
lib/game/: GameManager.cpp  GameManager.hpp
lib/generic/: packed_map.hpp  safe_queue.hpp  singleton.cpp  singleton.hpp
lib/helpers/: colors.hpp  constants.hpp  ecs_helpers.hpp  font_helper.cpp  font_helper.hpp  network_constants.hpp  network_helper.hpp  random.hpp  texture_manager.hpp
lib/model/: components.hpp  data.hpp  data_model.hpp  event.hpp
lib/network/: client.cpp  constants.hpp  listener1.cpp  listener2.cpp  publisher.cpp  publisher.hpp  server.cpp
lib/network/client_server/: client.cpp  client.hpp  server.cpp  server.hpp
lib/network/p2p/: host.cpp  host.hpp
lib/objects/: factory.cpp  factory.hpp  object.cpp  object.hpp
lib/objects/shapes/: rectangle.cpp  rectangle.hpp
lib/p2p/: client1.cpp  client1.hpp  client2.cpp  client2.hpp  client3.cpp  constants.hpp  host.cpp  host.hpp  server.cpp  server.hpp
lib/server/: worker.hpp
lib/strategy/: send_strategy.hpp  strategy_selector.hpp
lib/systems/: bubble_event_handler.hpp  bubble_grid.hpp  bubble_grid_movement.hpp  bubble_match_handler.hpp  bubble_movement.hpp  bubble_shooter.hpp  camera.cpp  client.hpp  client_entity_system.hpp  collision.cpp  collision.hpp  collision_handler.hpp  combo_event_handler.hpp  dash.hpp  death.hpp  destroy.hpp  entity_created_handler.hpp  event_system.hpp  game_over_handler.hpp  gravity.cpp  grid_generator.hpp  instruction_render.hpp  jump.cpp  jump.hpp  keyboard.hpp  keyboard_movement.cpp  kinematic.cpp  monster_collision.hpp  monster_defeated_handler.hpp  monster_hit_effects.hpp  monster_spawner.hpp  move_between_2_point_system.hpp  network_system.hpp  pause_handler.hpp  platform_spawner.hpp  platformcollision.hpp  pop_animation.hpp  position.hpp  position_update_handler.hpp  projectile_handler.hpp  (+23 more)
lib/testbench/: main.cpp  main.hpp  server.cpp
lib/thread_pool/: thread_pool.cpp  thread_pool.hpp
lib/zMQ/: client.cpp  listener1.cpp  server.cpp
